Changes in version: toOrdinal_0.0-6

  o Fixing testthat error message for Swedish.

Changes in version: toOrdinal_0.0-5

  o Minor fix so English works with 0.

Changes in version: toOrdinal_0.0-4

  o Some tweak to make CRAN worthy post R 3.2.1.

Changes in version: toOrdinal_0.0-3

  o Added support for Swedish (Jeff Erickson).

Changes in version: toOrdinal_0.0-2

  o Added messages indicating language support.
  o Added functionality to convert to ordinal word.

Changes in version: toOrdinal_0.0-1

  o Package Released.